gdalogpanel Remove observable list and do manual updates instead
This makes another big improvement in performance. Output from the tests
now:

Testing with min log level WARN
10000 logging messages sent;   10 UI events processed in   32
milliseconds;  0.003 milliseconds per message

Testing with min log level INFO
10000 logging messages sent;   10 UI events processed in   91
milliseconds;  0.009 milliseconds per message

Testing with min log level ALL
10000 logging messages sent;   25 UI events processed in  759
milliseconds;  0.076 milliseconds per message
10000 logging messages sent;   21 UI events processed in  773
milliseconds;  0.077 milliseconds per message
10000 logging messages sent;   21 UI events processed in  756
milliseconds;  0.076 milliseconds per message


Change-Id: Ib6866c1c0f5ac17173496ce84da95c76ce7fb921